--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,7 @@ requires-python = "~=3.12"
 dependencies = ["pydantic>=2.10.6"]
 
 [dependency-groups]
-dev = [
-    "datamodel-code-generator[http]>=0.30.1",
-    "httpx>=0.28.1",
-    "rich>=13.9.4",
-    "ruff>=0.9.3",
-]
+dev = ["datamodel-code-generator[http]>=0.30.1", "rich>=13.9.4", "ruff>=0.9.3"]
 
 [build-system]
 requires = ["hatchling"]
